deployments/k8s/overlays/canary/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notificationapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10" # 10% traffic to canary
spec:
  rules:
    - host: notificationapi.ngdangkietswe.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notificationapi
                port:
                  number: 3000
